# cog-llama-template

./: .dockerignore  .env  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE.txt  LLaMA V2 Fine-Tuned Model Preview User Guide.docx  Makefile  Notice-File.docx  README.md  base-schema.json  chat-schema.json  client.js  cog.yaml  config.py  convert_to_tensors.py  default.nix  fake_predict.py  flake.nix  gptq-exllama.py  gptq-vanilla.py  gptq.py  index.html  local_inference.py  lock.json  measure_download.py  mistral-schema.json  predict.py  pyproject.toml  repro_utils.py  reproduce.py  requirements-dev.txt  requirements.txt  sample_generations.txt  select_model.py  server.py  subclass.py  test_deserialization.py  test_fast_llama.py  (+7 more)
.github/workflows/: ci-build-staging-deploy.yml
axolotl-configs/: mistral.yaml
bug/: notes.md  process_data_distribution.py
code/: README.md  example_chat_completion.py  example_text_completion.py  setup.py
code/llama/: generation.py  model.py  tokenizer.py
ds_config/: ds_z3_bf16_config.json  ds_z3_fp16_config.json
examples/alpaca/: README.md  process_data.py
llama-recipes/: llama_finetuning.py
llama-recipes/utils/: dataset_utils.py
llama_recipes/: llama_finetuning.py
llama_recipes/configs/: __init__.py  datasets.py  fsdp.py  peft.py  training.py
llama_recipes/ft_datasets/: __init__.py  alpaca_dataset.py  completion_dataset.py  samsum_dataset.py  utils.py
llama_recipes/model_checkpointing/: __init__.py  checkpoint_handler.py
llama_recipes/policies/: activation_checkpointing_functions.py  anyprecision_optimizer.py  wrapping.py
llama_recipes/utils/: config_utils.py  dataset_utils.py  fsdp_utils.py  memory_utils.py  train_utils.py
llama_weights/llama-13b/: config.json
llama_weights/llama-7b/: config.json  generation_config.json
model_templates/: .dockerignore  cog.yaml  config.py  predict.py
models/: dockerignore
models/codellama-13b/: .dockerignore  cog.yaml  config.py  predict.py
models/codellama-13b-instruct/: .dockerignore  config.py  predict.py
models/codellama-13b-python/: .dockerignore  config.py
models/codellama-34b-instruct/: .dockerignore  .env  cog.yaml  config.py  predict.py
models/codellama-34b-python/: config.py  (+2 more)
notes/: new_model_notes.md
scripts/: benchmark_token_latency.py  cog_push_all.sh  convert_to_safetensors.py  convert_to_tensors.py  load_secrets.sh  pull_models.py  test_fast_llama.py  train_multi_gpu.sh  train_single_gpu.sh  utils.py
src/: aio_file.py  config_utils.py  download.py  exllama_predictor.py  more_utils.py  utils.py  webrtc.py
templates/: config_template.py
test/: push_test.py  run_tests.sh
tests/: conftest.py  push_test.py  test_e2e.py  test_predict.py  test_remote_predict.py  test_remote_train.py  test_train.py  test_train_predict.py  test_utils.py  timing.py
training/: basic_hf_trainer.py  patched_deepspeed_checkpoint.py  patched_hf_trainer.py  trainer.py
webrtc-client/: client.js  index.html  server.py
(+138 files in other folders)
