[tool.poetry]
name = "mirrorframe"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl"}
aitemplate = {url = "https://r2-public-worker.drysys.workers.dev/aitemplate-0.1.dev1-py3-none-any.whl"}
#nyacomp = {url = "https://r2-public-worker.drysys.workers.dev/nyacomp-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
# install in dockerfile as a diff layer for ease
transformers = "*"
#diffusers = ">=0.9"
diffusers = "==0.10.2"
aiohttp = {extras = ["speedups"], version="*"}
aiortc = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
