[tool.poetry]
name = "mirrorframe"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.1.0" # {url = "https://r2.drysys.workers.dev/torch/torch-2.1.0a0+git3af011b-cp311-cp311-linux_x86_64.whl"}
#aitemplate = {url = "https://r2-public-worker.drysys.workers.dev/aitemplate-0.1.dev1-py3-none-any.whl"}
aiohttp = {extras = ["speedups"], version="*"}
aiortc = "*"
transformers = "==4.33.2"
sentencepiece = "==0.1.99"
safetensors = "^0.3.1"
python-dotenv = "*"
vllm = {url = "https://github.com/replicate/vllm-with-loras/raw/moin/lora_weight_space/vllm-0.2a0-cp311-cp311-linux_x86_64.whl"}
xformers = {url = "https://r2.drysys.workers.dev/xformers-0.0.23+d18d0ef.d20231009-cp311-cp311-linux_x86_64.whl"}

# install in dockerfile as a diff layer for ease
#nyacomp = {url = "https://r2-public-worker.drysys.workers.dev/nyacomp-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
