# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "cog-llama-template"
version = "0.0.0"
optional-dependencies = { dev = ["ruff>=0.1.3"] }


[tool.poetry]
name = "mirrorframe"
version = "0.1.0"
description = ""
authors = ["various"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {url = "https://r2.drysys.workers.dev/torch/11.8/torch-2.1.0-cp311-cp311-linux_x86_64.whl"}
aiohttp = {extras = ["speedups"], version="*"}
aiortc = "*"
transformers = "==4.33.2"
sentencepiece = "==0.1.99"
safetensors = "^0.3.1"
python-dotenv = "*"
vllm = {url = "https://r2.drysys.workers.dev/vllm/11.8/vllm-0.2a0-cp311-cp311-linux_x86_64.whl"}
xformers = {url = "https://r2.drysys.workers.dev/xformers/11.8/xformers-0.0.23+b4c853d.d20231107-cp311-cp311-linux_x86_64.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
